# housereg-cicd-aws

./: Dockerfile  README.md  pyproject.toml  requirements.txt  test_data.csv
.github/workflows/: ci-cd.yml  health-check.yml
housereg/: house_price_pipeline.py  main.py  preprocessing_pipeline.pkl  run.ipynb
housereg/templates/: index.html
tests/: test_house_price_pipeline.py
