[tool.poetry]
name = "housereg"
version = "0.1.0"
description = ""
authors = ["Utkarsh <utkarsh.bhuiit@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^2.1.3"
pandas = "^2.2.3"
scikit-learn = "^1.5.2"
fastapi = "^0.115.5"
uvicorn = "^0.32.0"
joblib = "^1.4.2"
ipykernel = "^6.29.5"
jinja2 = "^3.1.4"
python-multipart = "^0.0.17"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
